--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 ._1-IPv6 Overview re-done.pdf
 Cisco - Networking/._04-ACLs_DHCP_NAT_IPv6.pdf
+Cisco - Networking/._IPv6 Cisco Stuff.pdf
+._LinuxCompilation-WIP.pdf
