--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 Cisco - Networking/._04-ACLs_DHCP_NAT_IPv6.pdf
 Cisco - Networking/._IPv6 Cisco Stuff.pdf
 ._LinuxCompilation-WIP.pdf
+._Subnetting 2023.pdf
