--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Cisco - Networking/._04-ACLs_DHCP_NAT_IPv6.pdf
 Cisco - Networking/._IPv6 Cisco Stuff.pdf
 ._LinuxCompilation-WIP.pdf
 ._Subnetting 2023.pdf
+._1-IPv6 Overview_re-done.pdf
+._Subnetting_2023.pdf
