--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Cisco - Networking/._IPv6 Cisco Stuff.pdf
 ._Subnetting 2023.pdf
 ._1-IPv6 Overview_re-done.pdf
 ._Subnetting_2023.pdf
+._TMendoza-LinuxCompilation-WIP.pdf
+._TMendoza-NetworkCompilation-WIP.pdf
+Cisco - Networking/._02a-Cabling Types and Specifications.pdf
+Cisco - Networking/._CISCO - CONSOLID - Ch1 - OSI and PROTOCOLS.pdf
