--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Cisco - Networking/._IPv6 Cisco Stuff.pdf
 ._TMendoza-NetworkCompilation-WIP.pdf
 Cisco - Networking/._02a-Cabling Types and Specifications.pdf
 Cisco - Networking/._CISCO - CONSOLID - Ch1 - OSI and PROTOCOLS.pdf
+._Docker-2023-Pt1.pdf
+._Git-2023-Pt1.pdf
