--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Cisco - Networking/._02a-Cabling Types and Specifications.pdf
 Cisco - Networking/._CISCO - CONSOLID - Ch1 - OSI and PROTOCOLS.pdf
 ._Docker-2023-Pt1.pdf
 ._Git-2023-Pt1.pdf
+Cisco - Networking/._OSPF-areas full diagram.png
+Cisco - Networking/._OSPF area types - Stub,Total,NSSA.pdf
+Cisco - Networking/._OSPF-areas full diagram.png
